--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding" color="light">
 
     <div class="img">
-        <ion-img src="/assets/login.png"></ion-img>
+        <img src="/assets/login.png">
     </div>
     <ion-text color="primary">
         <h1>Ingreso a la alarma</h1>
