--- a/src/app/utility/header/header.component.html
+++ b/src/app/utility/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border" translucent>
-    <ion-toolbar color="primary">
+    <ion-toolbar [color]="color? color : 'primary'">
 
         <ion-buttons slot="start" color="primary">
             <ion-back-button [defaultHref]="route!=null?'/':route" color="dark">
